5386 TOGGLE Støtter avslag manglende opplysninger for tom flyt (#1427)
Dersom det er tom flyt så finnes ikke behandlingsgrunnlag eller avkla…rte fakta. Det er disse vi bruker for å finne hentUtenlandskTrygdemyndighetsland. Det er derfor alltid tom liste ved tom flyt.

Tom flyt har ikke arbeidsgiver.