@@ -2,8 +2,8 @@ package no.nav.melosys.saksflyt.steg.behandling;
 
 import java.util.List;
 import java.util.function.Function;
-import java.util.stream.Collectors;
 
+import no.finn.unleash.Unleash;
 import no.nav.melosys.domain.Behandling;
 import no.nav.melosys.domain.Behandlingsresultat;
 import no.nav.melosys.domain.Fagsak;
@@ -18,6 +18,7 @@ import no.nav.melosys.service.aktoer.AktoerService;
 import no.nav.melosys.service.avklartefakta.AvklarteVirksomheterService;
 import no.nav.melosys.service.behandling.BehandlingService;
 import no.nav.melosys.service.behandling.BehandlingsresultatService;
+import no.nav.melosys.service.saksbehandling.SaksbehandlingRegler;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.stereotype.Component;
@@ -33,15 +34,18 @@ public class AvklarArbeidsgiver implements StegBehandler {
     private final AvklarteVirksomheterService avklarteVirksomheterService;
     private final BehandlingService behandlingService;
     private final BehandlingsresultatService behandlingsresultatService;
+    private final Unleash unleash;
 
     public AvklarArbeidsgiver(AktoerService aktoerService,
                               AvklarteVirksomheterService avklarteVirksomheterService,
                               BehandlingService behandlingService,
-                              BehandlingsresultatService behandlingsresultatService) {
+                              BehandlingsresultatService behandlingsresultatService,
+                              Unleash unleash) {
         this.aktoerService = aktoerService;
         this.avklarteVirksomheterService = avklarteVirksomheterService;
         this.behandlingService = behandlingService;
         this.behandlingsresultatService = behandlingsresultatService;
+        this.unleash = unleash;
     }
 
     public ProsessSteg inngangsSteg() {
@@ -51,17 +55,17 @@ public class AvklarArbeidsgiver implements StegBehandler {
     @Override
     public void utfør(Prosessinstans prosessinstans) {
 
+        long behandlingID = prosessinstans.getBehandling().getId();
+        Behandling behandling = behandlingService.hentBehandlingMedSaksopplysninger(behandlingID);
         Behandlingsresultat resultat = behandlingsresultatService.hentBehandlingsresultat(prosessinstans.getBehandling().getId());
-        if (arbeidsgiverAvklares(resultat)) {
-            long behandlingID = prosessinstans.getBehandling().getId();
-            Behandling behandling = behandlingService.hentBehandlingMedSaksopplysninger(behandlingID);
+        if (arbeidsgiverAvklares(behandling, resultat)) {
             Fagsak fagsak = behandling.getFagsak();
             String saksnummer = fagsak.getSaksnummer();
 
             List<AvklartVirksomhet> avklarteNorskeArbeidsgivere = avklarteVirksomheterService.hentNorskeArbeidsgivere(behandling, INGEN_ADRESSE);
             List<String> norskeOrgnumre = avklarteNorskeArbeidsgivere.stream()
                 .map(avklartVirksomhet -> avklartVirksomhet.orgnr)
-                .collect(Collectors.toList());
+                .toList();
 
             aktoerService.erstattEksisterendeArbeidsgiveraktører(fagsak, norskeOrgnumre);
 
@@ -73,7 +77,13 @@ public class AvklarArbeidsgiver implements StegBehandler {
         }
     }
 
-    private static boolean arbeidsgiverAvklares(Behandlingsresultat resultat) {
+    private boolean arbeidsgiverAvklares(Behandling behandling, Behandlingsresultat resultat) {
+        if (unleash.isEnabled("melosys.behandle_alle_saker")) {
+            return !SaksbehandlingRegler.harTomFlyt(behandling) && (
+                resultat.getType() == Behandlingsresultattyper.AVSLAG_MANGLENDE_OPPL
+                    || !resultat.hentValidertLovvalgsperiode().erArtikkel13()
+            );
+        }
         return resultat.getType() == Behandlingsresultattyper.AVSLAG_MANGLENDE_OPPL ||
             !resultat.hentValidertLovvalgsperiode().erArtikkel13();
     }
